syntax = "proto3";
package rumgap.v1;

import "rumgap/v1/paginate.proto";

message UserRegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message DeviceTokenRequest {
    string token = 1;
}

message UserRequest {
    string password = 1;
    oneof identifier {
        string username = 2;
        string email = 3;
    }
}

message UserUpdateRequest {
    optional string password = 1;
    optional string username = 2;
    optional string email = 3;
    repeated string preferred_hostnames = 4;
    repeated string device_ids = 5;
}

message UserReply {
    int32 id = 1;
    string username = 2;
    string email = 3;
    int32 permissions = 4;
    repeated string preferred_hostnames = 5;
    repeated string device_ids = 6;
    int64 created_at = 7;
    int64 updated_at = 8;
}

message UserFullReply {
    int32 id = 1;
    string username = 2;
    string email = 3;
    int32 permissions = 4;
    repeated string preferred_hostnames = 5;
    repeated string device_ids = 6;
    int64 count_following = 7;
    int64 count_followers = 8;
    int64 created_at = 9;
    int64 updated_at = 10;
}

message UserTokenReply {
    UserFullReply user = 1;
    string token = 2;
}

message UsersReply {
    PaginateReply pagination = 1;
    repeated UserReply items = 2;
}